--- a/views/partials/nav.ejs
+++ b/views/partials/nav.ejs
@@ -1,22 +1,32 @@
 <nav class="navbar navbar-expand-lg navbar-light bg-light">
-    <div class="container-fluid">
-      <a class="navbar-brand" href="/">Phạm Thành Nam </a>
-      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
-      </button>
-      <div class="collapse navbar-collapse" id="navbarNav">
-        <ul class="navbar-nav">
-          <li class="nav-item">
-            <a class="nav-link" aria-current="page" href="/">News</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="/comment">Comment</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="/category">Category</a>
-          </li>
-
-        </ul>
-      </div>
+  <div class="container-fluid">
+    <a class="navbar-brand" href="/">Phạm Thành Nam </a>
+    <button
+      class="navbar-toggler"
+      type="button"
+      data-bs-toggle="collapse"
+      data-bs-target="#navbarNav"
+      aria-controls="navbarNav"
+      aria-expanded="false"
+      aria-label="Toggle navigation"
+    >
+      <span class="navbar-toggler-icon"></span>
+    </button>
+    <div class="collapse navbar-collapse" id="navbarNav">
+      <ul class="navbar-nav">
+        <li class="nav-item">
+          <a class="nav-link" aria-current="page" href="/">News</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="/comment">Comment</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="/category">Category</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="/create">Create new</a>
+        </li>
+      </ul>
     </div>
-  </nav>
+  </div>
+</nav>
