--- a/views/category.ejs
+++ b/views/category.ejs
@@ -12,7 +12,7 @@
   </head>
   <body>
     <%- include('partials/nav.ejs') %>
-    <section class="vh-100" style="background-color: #eee">
+    <section class="vh-100 p-2" style="background-color: #eee">
       <div class="container py-5 h-100">
         <div class="row d-flex justify-content-center align-items-center h-100">
           <div class="col col-lg-9 col-xl-7">
