--- a/views/comment.ejs
+++ b/views/comment.ejs
@@ -1,16 +1,139 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <title><%= title %> - Phạm Thành Nam</title>
-    <link rel='stylesheet' href='/stylesheets/style.css' />
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+<head>
+  <title><%= title %> - Phạm Thành Nam</title>
+  <link rel="stylesheet" href="/stylesheets/style.css" />
+  <link
+          href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css"
+          rel="stylesheet"
+          integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC"
+          crossorigin="anonymous"
+  />
+</head>
+<body>
+<%- include('partials/nav.ejs') %>
+<section class="vh-100 p-2" style="background-color: #eee">
+  <div class="container py-5 h-100">
+    <div class="row d-flex justify-content-center align-items-center h-100">
+      <div class="col">
+        <div class="card rounded-3">
+          <div class="card-body p-4">
+            <h4 class="text-center my-3 pb-3">Comments</h4>
 
-  </head>
-  <body>
-    <%- include('partials/nav.ejs') %>
-    <h1><%= title %></h1>
-    <p>Welcome to <%= title %></p>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js" integrity="sha512-894YE6QWD5I59HgZOGReFYm4dnWc1Qt5NtvYSaNcOP+u1T9qYdvdihz0PPSiiqn/+/3e7Jo4EaG7TubfWGUrMQ==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
-  </body>
+            <form
+                    id="formData"
+                    action="/comment"
+                    method="post"
+                    class="row row-cols-lg-auto g-3 justify-content-center align-items-center mb-4 pb-2"
+            >
+              <div class="col-12">
+                <div class="form-outline">
+                  <input
+                          type="text"
+                          id="form1"
+                          name="comment"
+                          class="form-control"
+                  />
+                  <input type="hidden" id="formId" name="id" />
+                  <label class="form-label" for="form1"
+                  >Enter a name here</label
+                  >
+                </div>
+              </div>
+
+              <div class="col-12">
+                <button type="submit" disabled id="submitId" class="btn btn-primary">
+                  Save
+                </button>
+              </div>
+            </form>
+
+            <table class="table mb-4" id="tableCategory">
+              <thead>
+              <tr>
+                <th scope="col">Id</th>
+                <th scope="col">Title</th>
+                <th scope="col">Author</th>
+                <th scope="col">Content</th>
+                <th scope="col">Actions</th>
+              </tr>
+              </thead>
+              <tbody>
+              <% for (item of comments) { %>
+
+                <tr>
+                  <th scope="row"><%= item.id %></th>
+                  <td><%= item.title %></td>
+                  <td><%= item.author %></td>
+                  <td><%= item.content %></td>
+                  <td>
+                    <button
+                            type="submit"
+                            class="btn btn-success ms-1 button-edit"
+                            data-content="<%= item.content %>"
+                            data-id="<%= item.id %>"
+                    >
+                      Edit
+                    </button>
+                    <button
+                            type="submit"
+                            class="btn btn-danger button-delete"
+                            data-id="<%= item.id %>"
+                    >
+                      Delete
+                    </button>
+                  </td>
+                </tr>
+
+              <% } %>
+              </tbody>
+            </table>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+</section>
+<script
+        src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
+        crossorigin="anonymous"
+></script>
+<script
+        src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js"
+        integrity="sha512-894YE6QWD5I59HgZOGReFYm4dnWc1Qt5NtvYSaNcOP+u1T9qYdvdihz0PPSiiqn/+/3e7Jo4EaG7TubfWGUrMQ=="
+        crossorigin="anonymous"
+        referrerpolicy="no-referrer"
+></script>
+<script>
+  $(document).on(
+          "click",
+          "#tableCategory tbody tr td button.button-edit",
+          function () {
+            const content = $(this).data("content");
+            const id = $(this).data("id");
+
+            $("#formData").attr("action", `/comment/edit/${id}`);
+            $("#form1").val(content);
+            $("#formId").val(id);
+            $("#submitId").attr("disabled", false);
+            $("#submitId").text("Update");
+          }
+  );
+  $(document).on(
+          "click",
+          "#tableCategory tbody tr td button.button-delete",
+          function () {
+            const id = $(this).data("id");
+            $.ajax({
+              url: `comment/${id}`,
+              type: "DELETE",
+              success: function (result) {
+                location.reload();
+              },
+            });
+          }
+  );
+</script>
+</body>
 </html>
