--- a/views/index.ejs
+++ b/views/index.ejs
@@ -9,28 +9,28 @@
       integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC"
       crossorigin="anonymous"
     />
+
   </head>
   <body>
     <%- include('partials/nav.ejs') %>
-    <h1><%= title %></h1>
-    <p>Welcome to <%= title %></p>
-
-    <% for (item of data) { %>
-
-    <div class="card">
-      <img
-        src="<%= item.ImageUrl %>"
-        class="card-img-top"
-        alt="<%= item.Title %>"
-      />
-      <div class="card-body">
-        <h5 class="card-title"><%= item.Title %></h5>
-        <p class="card-text"><%= item.Content %></p>
-        <p class="card-text"><%= item.Author %></p>
-        <p class="card-text"><%= item.CreatedAt %></p>
+    <main class="container">
+      <div class="row">
+        <% for (item of data) { %>
+          <div class="col-sm-6">
+            <div class="card" style="width:40%">
+              <img class="card-img-top" src="<%= item.ImageUrl %>" alt="<%= item.Title %>" style="width:100%">
+              <div class="card-body">
+                <h4 class="card-title"><%= item.Title %></h4>
+                <p class="card-text"><%= item.Author %></p>
+                <p class="card-text"><%=item.CreatedAt %></p>
+                <a href="/post/<%= item.id %>" class="btn btn-primary">View post</a>
+              </div>
+            </div>
+          </div>
+        <% } %>
       </div>
-    </div>
-    <% } %>
+    </main>
+
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
